--- a/css/style.css
+++ b/css/style.css
@@ -487,7 +487,7 @@ header nav {
 
 
 /*******-----------------------------CAROUSEL------------------------------********/
-.tabletCarouselImage {
+.carousel-tablet {
 	display: none;
 }
 
@@ -783,6 +783,7 @@ header nav {
 	box-shadow: 1px 4px 3px 1px #ebebeb;
 	cursor: pointer;
 	max-height: 32%;
+	border-radius: 5px;
 }
 .court-block-featured {
 	min-height: 320px;
@@ -1093,6 +1094,15 @@ header nav {
 .desktop-footer {
 	background-color: #000000;
 	color: #999999;
+	margin-top: 3em;
+}
+.fix-bottom-absolute {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+}
+.footer-margin {
+	margin-top: 7em;
 }
 .desktop-footer-content {
 	padding: 1.2em 0em;
@@ -2591,6 +2601,7 @@ header nav {
 	background-color: #fff;
 	border: 1px solid #ececec;
 	display: flex;
+	border-radius: 5px;
 	grid-template-columns: 70px 50% auto;
 	grid-template-rows: 100%;
 	box-shadow: 1px 4px 3px 1px #ececec;
@@ -2737,7 +2748,7 @@ header nav {
 	width: 80%;
 	font-weight: 300;
 	list-style-type: none;
-	border-width: 2px;
+	border-width: 1px;
 	border-style: solid;
 	border-color: #bbbbbb;
 	border-radius: 15px;
@@ -2754,7 +2765,7 @@ header nav {
 	width: 80%;
 	font-weight: 300;
 	list-style-type: none;
-	border-width: 2px;
+	border-width: 1px;
 	border-style: solid;
 	border-color: #bbbbbb;
 	border-radius: 15px;
@@ -2782,7 +2793,7 @@ header nav {
 	width: 80%;
 	font-weight: 300;
 	list-style-type: none;
-	border-width: 2px;
+	border-width: 1px;
 	border-style: solid;
 	border-color: #bbbbbb;
 	border-radius: 15px;
@@ -2846,6 +2857,7 @@ header nav {
 	background-color: #fff;
 	border: 1px solid #bbbbbb;
 	border-radius: 5px;
+	box-shadow: 1px 4px 3px 1px #ececec;
 	overflow: hidden;
 }
 .added-court-image-block img:nth-child(1) {
@@ -2967,9 +2979,10 @@ header nav {
 	padding: 0em .6em;
 	padding-top: .8em;
 	background-color: #fff;
-	border: 1px solid #bbbbbb;
+	border: 1px solid #ececec;
 	border-radius: 5px;
 	position: relative;
+	box-shadow: 1px 4px 3px 1px #ececec;
 	display: grid;
 	grid-template-areas: "img"
 						 "h"
@@ -3101,9 +3114,10 @@ header nav {
 	width: 100%;
 	background-color: #fff;
 	margin-bottom: .8em;
-	border: 1px solid #bbbbbb;
+	border: 1px solid #ececec;
 	padding: .6em 1em;
 	box-shadow: 1px 4px 3px 1px #ebebeb;
+	border-radius: 5px;
 }
 
 
@@ -5019,7 +5033,7 @@ header nav {
 
 .manage-slots-calendar .filters .preview-court-set-hours span{
 	display: block;
-
+	cursor: pointer;
 }
 .manage-slots-calendar .filters .filters-content {
 	width: 80%;
@@ -5067,22 +5081,22 @@ header nav {
 }
 .manage-slots-calendar  .day-number {
 	font-size: .7em;
-	top: 2px;
-	left: 6px;
+	top: 1px;
+	left: 3px;
 	position: absolute;
 	color: #4b4b4b;
 }
 .manage-slots-calendar  .blocked-icon {
-	bottom: 2px;
-	right: 6px;
+	bottom: 1px;
+	right: 3px;
 	position: absolute;
 
 }
 .manage-slots-calendar  .slots-booked {
 	display: none;
-	font-size: .7em;
-	top: 4px;
-	right: 6px;
+	font-size: .6em;
+	top: 2px;
+	right: 3px;
 	position: absolute;
 	border-radius: 50px;
 	height: 1.5em;
@@ -5092,10 +5106,14 @@ header nav {
 	text-align: center;
 	font-weight: 600;
 }
+.manage-slots-calendar .calendar-block img {
+	width: 12px;
+	height: 14px;
+}
 .manage-slots-calendar .price-dollars {
 	font-size: .7em;
-	bottom: 2px;
-	left: 6px;
+	bottom: 1px;
+	left: 3px;
 	position: absolute;
 	color: #4b4b4b;
 }
@@ -5796,7 +5814,7 @@ header nav {
 }
 .messages .lower-header-messages {
 	font-size: .9em;
-	display: none;
+	display: flex;
 	flex-wrap: nowrap;
 	justify-content: space-between;
 }
@@ -7029,7 +7047,7 @@ header nav {
 		display: none;
 	}
 	.footer-container {
-		z-index: 2;
+		z-index: 50;
 		width: 100%;
 		height: auto;
 		padding: .4em 0em;
@@ -7041,6 +7059,11 @@ header nav {
 	}
 	.fix-bottom {
 		position: sticky;
+		bottom: 0;
+		width: 100%;
+	}
+	.fix-bottom-absolute {
+		position: absolute;
 		bottom: 0;
 		width: 100%;
 	}
@@ -7631,6 +7654,7 @@ header nav {
 		position: relative;
 		display: flex;
 		flex-wrap: wrap;
+		padding: 15px;
 	}
 	.notification-box .price-system {
 		font-size: .9em;
@@ -7798,6 +7822,12 @@ header nav {
 	}
 	.lower-header-messages {
 	
+	}
+	.messages .lower-header-messages {
+		font-size: .9em;
+		display: none;
+		flex-wrap: nowrap;
+		justify-content: space-between;
 	}
 	.show-messages-content {
 		display: flex!important;
@@ -8021,10 +8051,13 @@ header nav {
 	color: #fff;
 	border: none;
 	width: 120px;
-	padding: .2em 0em;
+	padding: .6em 0em;
 	font-size: .8em;
 	margin-bottom: 2em;
 	font-weight: 600;
+	position: sticky;
+	bottom: 90px;
+	display: none;
 	
 	}
 	.manage-slots-calendar .calendar-blocks-next-month, .manage-slots-calendar .calendar-blocks-next-month1, .manage-slots-calendar .calendar-blocks-next-month3 {
@@ -8472,7 +8505,34 @@ header nav {
 	.mobileCarouselImage {
 		display: none!important;
 	}
-	.tabletCarouselImage {
+	.carousel-tablet {
 		display: block!important;
+	}
+	.carousel-mobile {
+		display: none;
+	}
+	.carousel-tablet .carouselImage {
+		min-width: 100%;
+		max-height: 700px;
+	}
+
+	.carousel-tablet .carousel-content {
+		width: 100%;
+		left: 0;
+		top: 30%;
+	}
+	.carousel-tablet .carousel-content p {
+		width: 70%;
+		margin: auto;
+		margin-bottom: 1.2em;
+		margin-top: 1em;
+	}
+	.carousel-tablet .carousel-item {
+		position: relative;
+	}
+
+	.carousel-tablet .carousel-control-next, .carousel-tablet .carousel-control-prev {
+		z-index: 10;
+		opacity: 0;
 	}
 }
